[gd_scene load_steps=15 format=2]

[ext_resource path="res://sprites/L9_GrandHotel/rooms/external_wall_window-min.png" type="Texture" id=1]
[ext_resource path="res://sprites/L9_GrandHotel/rooms/exterior_balcony-min.png" type="Texture" id=2]
[ext_resource path="res://Levels/9.0 - Grand Hotel/external_balcony_railing.tscn" type="PackedScene" id=3]
[ext_resource path="res://effects/cpusnow.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/9.0 - Grand Hotel/TheConcierge.tscn" type="PackedScene" id=5]
[ext_resource path="res://hitnhurtboxes/TransitionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://Levels/9.0 - Grand Hotel/hotel_balcony.gd" type="Script" id=7]
[ext_resource path="res://sprites/L9_GrandHotel/rooms/exterior_wall_door-min.png" type="Texture" id=8]
[ext_resource path="res://sprites/L9_GrandHotel/rooms/external_pillar-min.png" type="Texture" id=9]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=12]
[ext_resource path="res://Cameras/PuppyCamera.tscn" type="PackedScene" id=15]
[ext_resource path="res://BG.tscn" type="PackedScene" id=16]
[ext_resource path="res://Brains/SpawnPoint.tscn" type="PackedScene" id=18]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 88.0564, 36.2936 )

[node name="hotel_balcony" type="Node2D"]
script = ExtResource( 7 )
__meta__ = {
"_edit_vertical_guides_": [ -913.058 ]
}

[node name="topTZ" parent="." instance=ExtResource( 6 )]
position = Vector2( 555.188, 690.029 )

[node name="CollisionShape2D" parent="topTZ" index="0"]
position = Vector2( -9.24988, 24.386 )
shape = SubResource( 1 )

[node name="topSP" parent="." instance=ExtResource( 18 )]
position = Vector2( 543.812, 833.148 )

[node name="BG" parent="." instance=ExtResource( 16 )]
margin_left = -2430.12
margin_top = -3032.56
margin_right = 3144.88
margin_bottom = 2575.44

[node name="bgstuff" type="Node2D" parent="."]

[node name="external_wall_window-min7" type="Sprite" parent="bgstuff"]
position = Vector2( -129.691, -212.373 )
texture = ExtResource( 1 )

[node name="external_wall_window-min8" type="Sprite" parent="bgstuff"]
position = Vector2( 568.253, -212.373 )
texture = ExtResource( 1 )

[node name="external_wall_window-min9" type="Sprite" parent="bgstuff"]
position = Vector2( 1267.88, -212.373 )
texture = ExtResource( 1 )

[node name="external_wall_window-min10" type="Sprite" parent="bgstuff"]
position = Vector2( 1974.23, -212.373 )
texture = ExtResource( 1 )

[node name="exterior_wall_door-min" type="Sprite" parent="bgstuff"]
position = Vector2( 554.799, 529.298 )
texture = ExtResource( 8 )

[node name="exterior_wall_door-min2" type="Sprite" parent="bgstuff"]
position = Vector2( 1254.42, 529.298 )
texture = ExtResource( 8 )

[node name="external_wall_window-min" type="Sprite" parent="bgstuff"]
position = Vector2( -138.1, 530.98 )
texture = ExtResource( 1 )

[node name="external_wall_window-min5" type="Sprite" parent="bgstuff"]
position = Vector2( 1960.78, 530.98 )
texture = ExtResource( 1 )

[node name="external_wall_window-min6" type="Sprite" parent="bgstuff"]
position = Vector2( 1947.32, 1282.74 )
texture = ExtResource( 1 )

[node name="external_wall_window-min2" type="Sprite" parent="bgstuff"]
position = Vector2( 536.299, 1286.1 )
texture = ExtResource( 1 )

[node name="external_wall_window-min3" type="Sprite" parent="bgstuff"]
position = Vector2( -154.918, 1284.42 )
texture = ExtResource( 1 )

[node name="external_wall_window-min4" type="Sprite" parent="bgstuff"]
position = Vector2( 1244.33, 1287.79 )
texture = ExtResource( 1 )

[node name="external_pillar-min" type="Sprite" parent="bgstuff"]
position = Vector2( 191.539, 1314.72 )
texture = ExtResource( 9 )

[node name="external_pillar-min2" type="Sprite" parent="bgstuff"]
position = Vector2( 890.927, 1314.72 )
texture = ExtResource( 9 )

[node name="external_pillar-min3" type="Sprite" parent="bgstuff"]
position = Vector2( 1597.18, 1314.72 )
texture = ExtResource( 9 )

[node name="external_pillar-min4" type="Sprite" parent="bgstuff"]
position = Vector2( 1597.18, 539.352 )
texture = ExtResource( 9 )

[node name="external_pillar-min5" type="Sprite" parent="bgstuff"]
position = Vector2( 899.321, 544.398 )
texture = ExtResource( 9 )

[node name="external_pillar-min6" type="Sprite" parent="bgstuff"]
position = Vector2( 203.431, 539.352 )
texture = ExtResource( 9 )

[node name="external_pillar-min7" type="Sprite" parent="bgstuff"]
position = Vector2( 208.188, -233.632 )
texture = ExtResource( 9 )

[node name="external_pillar-min8" type="Sprite" parent="bgstuff"]
position = Vector2( 902.684, -233.632 )
texture = ExtResource( 9 )

[node name="external_pillar-min9" type="Sprite" parent="bgstuff"]
position = Vector2( 1606.69, -230.269 )
texture = ExtResource( 9 )

[node name="exterior_balcony-min" type="Sprite" parent="bgstuff"]
position = Vector2( 536.972, 860.947 )
texture = ExtResource( 2 )

[node name="exterior_balcony-min3" type="Sprite" parent="bgstuff"]
position = Vector2( 536.972, -81.0526 )
texture = ExtResource( 2 )

[node name="exterior_balcony-min4" type="Sprite" parent="bgstuff"]
position = Vector2( 1264.97, -81.0526 )
texture = ExtResource( 2 )

[node name="exterior_balcony-min2" type="Sprite" parent="bgstuff"]
position = Vector2( 1245.01, 864.311 )
texture = ExtResource( 2 )

[node name="YSort" type="YSort" parent="."]

[node name="player" parent="YSort" instance=ExtResource( 12 )]
position = Vector2( 459.638, 845.325 )
camera = NodePath("../../PuppyCamera")

[node name="external_balcony_railing" parent="YSort" instance=ExtResource( 3 )]
position = Vector2( 529.236, 904.001 )

[node name="external_balcony_railing2" parent="YSort" instance=ExtResource( 3 )]
position = Vector2( 1235.59, 904.001 )

[node name="TheConcierge" parent="YSort" instance=ExtResource( 5 )]
position = Vector2( 1253.42, 811.057 )

[node name="PuppyCamera" parent="." instance=ExtResource( 15 )]
position = Vector2( 436.776, -516.806 )

[node name="UpperLeft" parent="PuppyCamera/Limits" index="0"]
position = Vector2( -145.36, 5.62594 )

[node name="BottomRight" parent="PuppyCamera/Limits" index="1"]
position = Vector2( 1831.35, 1095.08 )

[node name="FG" type="Node2D" parent="."]
position = Vector2( 4.24261, 0 )

[node name="cpusnow" parent="FG" instance=ExtResource( 4 )]
position = Vector2( 423.467, -165.698 )

[node name="cpusnow2" parent="FG" instance=ExtResource( 4 )]
position = Vector2( 543.87, -97.432 )
scale_amount = 10.0

[node name="Collisions" type="Node2D" parent="."]
visible = false

[node name="StaticBody2D" type="StaticBody2D" parent="Collisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Collisions/StaticBody2D"]
polygon = PoolVector2Array( 444, 662.5, 546, 660.5, 230, 564.5, 208, 1198.5, 848, 1214.5, 810, 564.5, 558, 662.5, 648, 664.5, 648, 790.5, 742, 798.5, 740, 906.5, 340, 904.5, 336, 798.5, 436, 790.5 )

[connection signal="transition_triggered" from="topTZ" to="." method="_on_topTZ_transition_triggered"]

[editable path="topTZ"]
[editable path="PuppyCamera"]
